<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.dfo.epeppolstandalone</groupId>
	<artifactId>dfo-peppol-standalone</artifactId>
	<version>v1.0.0</version>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<junit.version>5.10.2</junit.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>23</maven.compiler.source>
		<maven.compiler.target>23</maven.compiler.target>
		<dss.version>6.2.RC1</dss.version>
		<bouncycastle.version>1.76</bouncycastle.version>
		<javafx.version>17</javafx.version>
		<jakarta.xmlbind.version>3.0.1</jakarta.xmlbind.version>
		<jakarta.activation.version>2.0.1</jakarta.activation.version>
		<jaxb.version>3.0.2</jaxb.version>
	</properties>

	<dependencies>


		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>${javafx.version}</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>${javafx.version}</version>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20240303</version>
		</dependency>
		<dependency>
			<groupId>eu.europa.ec.joinup.sd-dss</groupId>
			<artifactId>dss-service</artifactId>
			<version>${dss.version}</version>
			<exclusions>
				<exclusion>
					<artifactId>commons-logging</artifactId>
					<groupId>commons-logging</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.jcraft/jsch -->
		<dependency>
			<groupId>com.jcraft</groupId>
			<artifactId>jsch</artifactId>
			<version>0.1.55</version>
		</dependency>
		<dependency>
			<groupId>org.bouncycastle</groupId>
			<artifactId>bcprov-jdk18on</artifactId>
			<version>${bouncycastle.version}</version>
		</dependency>
		<!--<dependency>
            <groupId>eu.europa.ec.joinup.sd-dss</groupId>
            <artifactId>dss-utils</artifactId>
            <version>${dss.version}</version>
        </dependency>-->
		<dependency>
			<groupId>eu.europa.ec.joinup.sd-dss</groupId>
			<artifactId>dss-utils-apache-commons</artifactId>
			<version>${dss.version}</version>
		</dependency>
		<dependency>
			<groupId>org.bouncycastle</groupId>
			<artifactId>bcpkix-jdk18on</artifactId>
			<version>${bouncycastle.version}</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.15.1</version>
		</dependency>
		<dependency>
			<groupId>eu.europa.ec.joinup.sd-dss</groupId>
			<artifactId>dss-enumerations</artifactId>
			<version>${dss.version}</version>
		</dependency>

		<dependency>
			<groupId>eu.europa.ec.joinup.sd-dss</groupId>
			<artifactId>dss-asic-cades</artifactId>
			<version>${dss.version}</version>
		</dependency>
		<dependency>
			<groupId>eu.europa.ec.joinup.sd-dss</groupId>
			<artifactId>dss-asic-common</artifactId>
			<version>${dss.version}</version>
		</dependency>
		<!--  <dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<type>pom</type>
				<version>3.4.1</version>
				<scope>import</scope>
			</dependency>-->

		<dependency>
			<groupId>eu.europa.ec.joinup.sd-dss</groupId>
			<artifactId>dss-document</artifactId>
			<version>${dss.version}</version>
		</dependency>

		<dependency>
			<groupId>eu.europa.ec.joinup.sd-dss</groupId>
			<artifactId>dss-model</artifactId>
			<version>${dss.version}</version>
		</dependency>
		<dependency>
			<groupId>eu.europa.ec.joinup.sd-dss</groupId>
			<artifactId>dss-spi</artifactId>
			<version>${dss.version}</version>
		</dependency>
		<dependency>
			<groupId>eu.europa.ec.joinup.sd-dss</groupId>
			<artifactId>dss-token</artifactId>
			<version>${dss.version}</version>
		</dependency>
		<!--
		https://mvnrepository.com/artifact/jakarta.activation/jakarta.activation-api -->
		<dependency>
			<groupId>jakarta.activation</groupId>
			<artifactId>jakarta.activation-api</artifactId>
			<version>${jakarta.activation.version}</version>
		</dependency>
		<dependency>
			<groupId>jakarta.xml.bind</groupId>
			<artifactId>jakarta.xml.bind-api</artifactId>
			<version>${jakarta.xmlbind.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.glassfish.jaxb/jaxb-core -->
		<dependency>
			<groupId>org.glassfish.jaxb</groupId>
			<artifactId>jaxb-core</artifactId>
			<version>${jaxb.version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.glassfish.jaxb/jaxb-runtime -->
		<dependency>
			<groupId>org.glassfish.jaxb</groupId>
			<artifactId>jaxb-runtime</artifactId>
			<version>${jaxb.version}</version>
		</dependency>


	</dependencies>


	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<mainClass>no.dfo.peppol.PEPPOLStandalone.RunMain</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>

		</plugins>

		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>false</filtering>
			</resource>
		</resources>
	</build>

	<profiles>
		<profile>
			<id>jdk19-plus</id>
			<activation>
				<jdk>[9,)</jdk>
			</activation>

			<build>
				<plugins>
					<plugin>
						<artifactId>maven-assembly-plugin</artifactId>
						<configuration>
							<archive>
								<manifest>
									<mainClass>
										no.dfo.peppol.PEPPOLStandalone.RunMain</mainClass>
								</manifest>
							</archive>
							<descriptorRefs>
								<descriptorRef>jar-with-dependencies</descriptorRef>
							</descriptorRefs>
						</configuration>
					</plugin>
					<plugin>
						<artifactId>maven-compiler-plugin</artifactId>
						<configuration>
							<source>23</source>
							<target>23</target>

							<!-- jdk.crypto.cryptoki : SunPKCS11 -->
							<compilerArgs>
								<arg>--add-modules</arg>
								<arg>jdk.crypto.cryptoki</arg>

								<arg>--add-exports</arg>
								<arg>
									jdk.crypto.cryptoki/sun.security.pkcs11.wrapper=ALL-UNNAMED</arg>

								<!-- Reflection at runtime -->
								<arg>--add-opens</arg>
								<arg>
									jdk.crypto.cryptoki/sun.security.pkcs11=ALL-UNNAMED</arg>
							</compilerArgs>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<configuration>
							<argLine>--add-modules jdk.crypto.cryptoki</argLine>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>


</project>
